--- a/Proyectos Acamica/01. CV/CVOnline/index.html
+++ b/Proyectos Acamica/01. CV/CVOnline/index.html
@@ -7,7 +7,7 @@
  	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
 
 </head>
-	<body>
+	<body class="limite">
 		
 
 			<div class="navbar">
@@ -27,7 +27,7 @@
 		</div>
 			
 
-		<div id="contenidoprincipal">
+		<div id="contenidoprincipal" class="limite">
 				<img src="Images/JR_2.png" alt="Foto de perfil" class="resize">
 				<h1>JORGE ROLDÁN</h1>
 				<button><a href="quiensoy.html">Quien Soy</a></button><br>
@@ -36,7 +36,7 @@
 				<button><a href="portfolio.html">Portfolio</a></button><br>
 		</div>
 
-		<div id="contenidosecundario">
+		<div id="contenidosecundario" class="limite">
 
 
 			<div id="seccion">
