--- a/Proyectos Acamica/01. CV/CVOnline/perfil.html
+++ b/Proyectos Acamica/01. CV/CVOnline/perfil.html
@@ -4,11 +4,14 @@
 	<meta charset="UTF-8">
 	<title>Perfil</title>
  	<link rel="stylesheet" type="text/css" href="estilos.css">
+ 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+ 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+ 	<!-- <script defer src="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"></script> -->
 
-<!-- Fuente: https://codepen.io/_gwen2405/pen/rraWPX -->
+// <!-- Fuente: https://codepen.io/_gwen2405/pen/rraWPX -->
 
-<!-- Iconos -->
-<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+// <!-- Iconos -->
+<!-- // <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script> -->
 
 </head>
 
