CV Online ordenado

--- a/Proyectos Acamica/01. CV/CV_Extra/index.html
+++ b/Proyectos Acamica/01. CV/CV_Extra/index.html
@@ -1,17 +1,17 @@
+<!-- Fuente: https://codepen.io/_gwen2405/pen/rraWPX -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Perfil</title>
+	<title>CV Extra</title>
  	<link rel="stylesheet" type="text/css" href="estilos.css">
+
  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
- 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
- 	<!-- <script defer src="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"></script> -->
-
-// <!-- Fuente: https://codepen.io/_gwen2405/pen/rraWPX -->
-
-// <!-- Iconos -->
-<!-- // <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script> -->
+ 	<!-- <link rel="stylesheet" href="comportamiento.js"> -->
+ 	
+	<!-- Iconos -->
+	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 
 </head>
 
@@ -23,7 +23,7 @@
 			<div class="title"><h2>CV Online</h2></div>
 			<div class="top">
 				<div class="img-container">
-					<img src="Images/JR_2.png" alt="image">
+					<img src="../Imagenes/JR_2.png" alt="image">
 				</div>
 			</div>
 			<div class="description">
@@ -181,49 +181,49 @@
 			<p class="col-xs-10">Aqui podrás ver algunos de los proyectos en los que ha trabajado Jorge Roldán</p>
 			<ul class="list-border gallery">
 				<li class="col-xs-5">
-					<img src="../Imagenesacamica/encuestados-icon.png" class="img-responsive" alt="">
+					<img src="../Imagenes/encuestados-icon.png" class="img-responsive" alt="">
 					<h6>
 						<strong>Encuestados</strong> 
 						<br>(Marzo, 2018) 
 					</h6>
 				</li>
 				<li class="col-xs-5">
-					<img src="../Imagenesacamica/mapa-interactivo-icon.png" class="img-responsive" alt="">
+					<img src="../Imagenes/mapa-interactivo-icon.png" class="img-responsive" alt="">
 					<h6>
 						<strong>Mapa Interactivo</strong> 
 						<br> (Marzo, 2018)
 					</h6>
 				</li>
 				<li class="col-xs-5">
-					<img src="../Imagenesacamica/peli-vs-peli-icon.png" class="img-responsive" alt="">
+					<img src="../Imagenes/peli-vs-peli-icon.png" class="img-responsive" alt="">
 					<h6><strong>Peli vs Peli</strong> <br>(Marzo, 2018)</h6>
 				</li>
 				<li class="col-xs-5">
-					<img src="../Imagenesacamica/pixel-art-icon.png" class="img-responsive" alt="">
+					<img src="../Imagenes/pixel-art-icon.png" class="img-responsive" alt="">
 					<h6>
 						<strong>Pixel Art</strong> 
 						<br>(Marzo, 2018)
 					</h6>
 				</li>
 				<li class="col-xs-5">
-					<img src="../Imagenesacamica/recargado-icon.png" class="img-responsive" alt="">
+					<img src="../Imagenes/recargado-icon.png" class="img-responsive" alt="">
 					<h6>
 						<strong>Recargado</strong> 
 						<br>(Marzo, 2018)</h6>
 				</li>
 				<li class="col-xs-5">
-					<img src="../Imagenesacamica/que-veo-icon.png" class="img-responsive" alt="">
+					<img src="../Imagenes/que-veo-icon.png" class="img-responsive" alt="">
 					<h6><strong>Que veo</strong> <br>(Marzo, 2018))</h6>
 				</li>
 				<li class="col-xs-5">
-					<img src="../Imagenesacamica/ciudad-zombie-icon.png" class="img-responsive" alt="">
+					<img src="../Imagenes/ciudad-zombie-icon.png" class="img-responsive" alt="">
 					<h6>
 						<strong>Ciudad Zombie</strong> 
 						<br>(Marzo, 2018)
 					</h6>
 				</li>
 				<li class="col-xs-5">
-					<img src="../Imagenesacamica/cv-icon.png" class="img-responsive" alt="">
+					<img src="../Imagenes/cv-icon.png" class="img-responsive" alt="">
 					<h6>
 						<strong>CV Online </strong> 
 						<br>(Marzo, 2018)
@@ -233,11 +233,9 @@
 			<a class="btn-close"><i class="fa fa-times"></i></a>
 		</div>
 </body>
-
-
-<!-- Comportamiento -->
-
 <script>
+	
+
 	$(function(){
 		$('.list li:first-child').click(function(){
 			 window.setTimeout(function() {
