--- a/Proyectos Acamica/02. HomeBanking/recursos-home-banking/index.html
+++ b/Proyectos Acamica/02. HomeBanking/recursos-home-banking/index.html
@@ -32,6 +32,6 @@
         </div>
       </div>
     </div>
-    <script src="js/homebanking2.js"></script>
   </body>
+  <script src="js/homebanking.js"></script>
 </html>
