--- a/Proyectos Acamica/01. CV/CVOnline/index.html
+++ b/Proyectos Acamica/01. CV/CVOnline/index.html
@@ -1,83 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>CV Online</title>
- 	<link rel="stylesheet" type="text/css" href="main.css">
- 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
-
-</head>
+	<head>
+		<meta charset="UTF-8">
+		<title>CV Online</title>
+	 	<link rel="stylesheet" type="text/css" href="main.css">
+	</head>
 	<body class="limite">
-		
 
-			<div class="navbar">
-			  <a href="#"><svg viewBox="0 0 24 24">
-			    <path fill="#ffffff" d="M9,19V13H11L13,13H15V19H18V10.91L12,4.91L6,10.91V19H9M12,2.09L21.91,12H20V21H13V15H11V21H4V12H2.09L12,2.09Z" />
-			    </svg></a>
-			  
-			  <a href="#">Quién soy</a>
-			  <a href="#">Formación</a>
-			  <a href="#">Experiencia</a>
-			  <a href="#">Portfolio</a>
-			  <a href="https://codepen.io/xubiod" target="_blank" class="hover-black hold-right"><!-- <svg viewBox="0 0 24 24">
-			    <path fill="#ffffff" d="M15.09,12L12,14.08V14.09L8.91,12L12,9.92V9.92L15.09,12M12,2C11.84,2 11.68,2.06 11.53,2.15L2.5,8.11C2.27,8.22 2.09,8.43 2,8.67V14.92C2,15.33 2,15.33 2.15,15.53L11.53,21.86C11.67,21.96 11.84,22 12,22C12.16,22 12.33,21.95 12.47,21.85L21.85,15.5C22,15.33 22,15.33 22,14.92V8.67C21.91,8.42 21.73,8.22 21.5,8.1L12.47,2.15C12.32,2.05 12.16,2 12,2M16.58,13L19.59,15.04L12.83,19.6V15.53L16.58,13M19.69,8.9L16.58,11L12.83,8.47V4.38L19.69,8.9M20.33,10.47V13.53L18.07,12L20.33,10.47M7.42,13L11.17,15.54V19.6L4.41,15.04L7.42,13M4.31,8.9L11.17,4.39V8.5L7.42,11L4.31,8.9M3.67,10.5L5.93,12L3.67,13.54V10.5Z" />
-			</svg> --> &nbsp CV ONLINE</a>
-			</div>
+<!-- Barra de Navegación -->
+		<div class="navbar">
+		  <a href="#"><svg viewBox="0 0 24 24">
+		    <path fill="#ffffff" d="M9,19V13H11L13,13H15V19H18V10.91L12,4.91L6,10.91V19H9M12,2.09L21.91,12H20V21H13V15H11V21H4V12H2.09L12,2.09Z" />
+		    </svg></a>		  
+		  <a href="#">Quién soy</a>
+		  <a href="#">Formación</a>
+		  <a href="#">Experiencia</a>
+		  <a href="#">Portfolio</a>
+		  <a href="#" target="_blank" class="hover-black hold-right">JORGE ROLDÁN</a>
+		</div>
+
+<!-- Encabezado y foto de perfil -->
 		<div id="encabezado">
 		</div>
-			
 
+<!-- Contenido Principal -->	
 		<div id="contenidoprincipal" class="limite">
-				<img src="Images/JR_2.png" alt="Foto de perfil" class="resize">
-				<h1>JORGE ROLDÁN</h1>
-				<button><a href="quiensoy.html">Quien Soy</a></button><br>
-				<button><a href="formacion.html">Formación</a></button><br>
-				<button><a href="experiencia.html">Experiencia</a></button><br>
-				<button><a href="portfolio.html">Portfolio</a></button><br>
+			<img src="../Imagenes/JR_2.png" alt="Foto de perfil" class="resize">
+			<h1>JORGE ROLDÁN</h1>
 		</div>
 
+<!-- Contenido Secundario -->
 		<div id="contenidosecundario" class="limite">
-
-
 			<div id="seccion">
+
+	<!-- Quién Soy -->
 			<h2 class="titulo">Quién Soy</h2>	
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit assumenda voluptate consequuntur quidem, odio, esse nisi architecto, aliquid nostrum totam vel velit dicta soluta iure adipisci. Consequatur, quia corporis reiciendis.</p>
 				<ul>
-					<li><strong>Dirección:</strong>Ayacucho 1000</li>
+					<li><strong>Dirección:</strong>Ayacucho 1300</li>
 					<li><strong>Telefono:</strong>01-800-333-1000</li>
-					<li><strong>Correo:</strong>micorreo@dominio.com</li>
+					<li><strong>Correo:</strong>roldan21@gmail.com</li>
 				</ul>			
 			</div>
+	
+	<!-- Formación -->
 			<div id="seccion">	
 				<h2 class="titulo">Formación</h2>
-				<h3><strong>Universidad</strong></h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, dolorum, rem. Assumenda fugiat quis harum temporibus, at ullam unde odit minus dolor, explicabo vero consequatur. Incidunt delectus aliquid vel quibusdam.</p>
-				<h3><strong>Universidad</strong></h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, dolorum, rem. Assumenda fugiat quis harum temporibus, at ullam unde odit minus dolor, explicabo vero consequatur. Incidunt delectus aliquid vel quibusdam.</p>				
-			
+				<h3><strong>Ing. Industrial, Tecnológico de Monterrey</strong></h3>
+				<p>2004-2009</p>
+				<h3><strong>Profesorado nivel medio y superior,  Universidad Austral</strong></h3>
+				<p>2014-2016</p>						
 			</div>
-
+	
+	<!-- Experiencia -->
 			<div id="seccion">
 				<h2 class="titulo">Experiencia</h2>
-				<h3><strong>Empresa 1 </strong></h3>
+				<h3><strong>Ministerio de Educación de la Provincia de Buenos Aires</strong></h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere maxime distinctio cum dolores autem magni culpa doloribus in similique laudantium. Quod quaerat facilis suscipit laborum fugiat! Adipisci ipsa vitae nisi.</p>
-				<h3><strong>Empresa 1 </strong></h3>
+				<h3><strong>Comunidad Developers for Good</strong></h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere maxime distinctio cum dolores autem magni culpa doloribus in similique laudantium. Quod quaerat facilis suscipit laborum fugiat! Adipisci ipsa vitae nisi.</p>
-				<h3><strong>Empresa 1 </strong></h3>
+				<h3><strong>Fundación Enseñá por Argentina</strong></h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere maxime distinctio cum dolores autem magni culpa doloribus in similique laudantium. Quod quaerat facilis suscipit laborum fugiat! Adipisci ipsa vitae nisi.</p>
+				<h3><strong>Faurecia</strong></h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere maxime distinctio cum dolores autem magni culpa doloribus in similique laudantium. Quod quaerat facilis suscipit laborum fugiat! Adipisci ipsa vitae nisi.</p>
 			</div>
-			<div id="portfolio">
+	
+	<!-- Portfolio -->
+			<div id="seccion">
 				<h2 class="titulo">Portfolio</h2>
-				<div class="col columna-1"><a href="#"><img src="../Imagenesacamica/encuestados-icon.png" alt="proyecto encuestados"></a></div>
-				<div class="col columna-2"><a href="#"><img src="../Imagenesacamica/mapa-interactivo-icon.png" alt="mapa interactivo"></a></div>
-				<div class="col columna-3"><a href="#"><img src="../Imagenesacamica/peli-vs-peli-icon.png" alt="peli vs peli"></a></div>
-				<div class="col columna-4"><a href="#"><img src="../Imagenesacamica/pixel-art-icon.png" alt="pixel"></a></div>
-				<div class="col columna-5"><a href="#"><img src="../Imagenesacamica/recargado-icon.png" alt="recargado"></a></div>
-				<div class="col columna-6"><a href="#"><img src="../Imagenesacamica/que-veo-icon.png" alt="que veo"></a></div>
-				<div class="col columna-7"><a href="#"><img src="../Imagenesacamica/rompecabezas-icon.png" alt="rompecabezas"></a></div>
+				<!-- <h6 class="subtitlo">Encuestados</h6> -->
+				<div class="col columna-1"><a href="#"><img src="../Imagenes/encuestados-icon.png" alt="proyecto encuestados"></a></div>
+				<!-- <h6 class="subtitlo">Mapa Interactivo</h6> -->
+				<div class="col columna-2"><a href="#"><img src="../Imagenes/mapa-interactivo-icon.png" alt="mapa interactivo"></a></div>
+				<!-- <h6 class="subtitlo">Peli vs Peli</h6> -->
+				<div class="col columna-3"><a href="#"><img src="../Imagenes/peli-vs-peli-icon.png" alt="peli vs peli"></a></div>
+				<!-- <h6 class="subtitlo">Pixel</h6>				 -->
+				<div class="col columna-4"><a href="#"><img src="../Imagenes/pixel-art-icon.png" alt="pixel"></a></div>
+				<!-- <h6 class="subtitlo">Recargado</h6> -->
+				<div class="col columna-5"><a href="#"><img src="../Imagenes/recargado-icon.png" alt="recargado"></a></div>
+				<!-- <h6 class="subtitlo">Que veo</h6> -->
+				<div class="col columna-6"><a href="#"><img src="../Imagenes/que-veo-icon.png" alt="que veo"></a></div>
+				<!-- <h6 class="subtitlo">Rompecabezas</h6> -->
+				<div class="col columna-7"><a href="../../03. Rompecabezas/rompecabezas-recursos/juego.html"><img src="../Imagenes/rompecabezas-icon.png" alt="rompecabezas"></a></div>
 			</div>
-
 		</div>
-
 	</body>
 </html>
