--- a/Proyectos Acamica/01. CV/CV_Extra/index.html
+++ b/Proyectos Acamica/01. CV/CV_Extra/index.html
@@ -43,7 +43,7 @@
 		<div class="list-content profile">
 			<h3>Quién soy</h3>
 			<div class="img-rounded">
-				<img src="Images/JR_3.png" alt="image">
+				<img src="../Imagenes/JR_3.png" alt="image">
 			</div>
 			<ul class="list-border">
 				<li>	
