--- a/Proyectos Acamica/02. HomeBanking/recursos-home-banking/index.html
+++ b/Proyectos Acamica/02. HomeBanking/recursos-home-banking/index.html
@@ -11,6 +11,7 @@
     <div class="header">
       <img class="logo" src="img/logo.png"/>
       <div class="align-left">
+        <button id="login" class="iniciarsesion" onclick="login()">Iniciar Sesión</button>
         <span id="nombre">Bienvenido/a</span>
         <img class="avatar" src="img/avatar.svg"/>
       </div>
@@ -21,6 +22,7 @@
         <button class="links" onclick="extraerDinero()">Extraer dinero</button>
         <button class="links" onclick="depositarDinero()">Depositar dinero</button>
         <button class="links" onclick="pagarServicio()">Pagar servicios</button>
+        <button class="links" onclick="agregarCuentafrecuente()">Agregar cuenta frecuente</button>
         <button class="links" onclick="transferirDinero()">Transferir dinero</button>
         <button class="links" onclick="cambiarLimiteDeExtraccion()">Cambiar límite de extracción</button>
       </div>
