--- a/Proyectos Acamica/02. HomeBanking/recursos-home-banking/index.html
+++ b/Proyectos Acamica/02. HomeBanking/recursos-home-banking/index.html
@@ -23,6 +23,33 @@
       </div>
     </div>
 
+    <div id="card" style="display: block">
+        <!-- Image card -->
+        <style>
+        .demo-card-image.mdl-card {
+          width: 256px;
+          height: 256px;
+          background: url('../../01. CV/Imagenes/JR_3.png') center / cover;
+        }
+        .demo-card-image > .mdl-card__actions {
+          height: 52px;
+          padding: 16px;
+          background: rgba(0, 0, 0, 0.2);
+        }
+        .demo-card-image__filename {
+          color: #fff;
+          font-size: 14px;
+          font-weight: 500;
+        }
+        </style>
+
+        <div class="demo-card-image mdl-card mdl-shadow--2dp">
+          <div class="mdl-card__title mdl-card--expand"></div>
+          <div class="mdl-card__actions">
+            <span class="demo-card-image__filename">Bienvenido/a al HomeBanking</span>
+          </div>
+        </div>
+    </div>
     <div id="homebanking" style="display: none">
       <div class="white-container">
       <div class="menu-container">
@@ -42,7 +69,7 @@
         </div>
       </div>
     </div>
-      
+
     </div>
     
   </body>
