--- a/Proyectos Acamica/02. HomeBanking/recursos-home-banking/index.html
+++ b/Proyectos Acamica/02. HomeBanking/recursos-home-banking/index.html
@@ -19,7 +19,7 @@
       <div class="align-left">
         <button id="login" style="display: block" onclick="login()" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">Iniciar Sesión</button>
         <span id="nombre" style="display: none">Bienvenido/a</span>
-        <img class="avatar" style="display: none" src="img/avatar.svg"/>
+        <img id="icono" class="avatar" style="display: none" src="img/avatar.svg"/>
       </div>
     </div>
 
@@ -30,6 +30,8 @@
           width: 256px;
           height: 256px;
           background: url('../../01. CV/Imagenes/JR_3.png') center / cover;
+          margin-left: auto;
+          margin-right: auto;
         }
         .demo-card-image > .mdl-card__actions {
           height: 52px;
@@ -49,6 +51,12 @@
             <span class="demo-card-image__filename">Bienvenido/a al HomeBanking</span>
           </div>
         </div>
+    </div>
+
+
+    <div>
+      
+
     </div>
     <div id="homebanking" style="display: none">
       <div class="white-container">
