--- a/Proyectos Acamica/02. HomeBanking/firebase-home-banking/login-app/index.html
+++ b/Proyectos Acamica/02. HomeBanking/firebase-home-banking/login-app/index.html
@@ -37,7 +37,7 @@
     <div id="login-fire" >
       <login-app-app></login-app-app>
     </div>
-    
+
     <div id="card" style="display: block">
         <!-- Image card -->
         <style>
@@ -63,7 +63,7 @@
         <div class="demo-card-image mdl-card mdl-shadow--2dp">
           <div class="mdl-card__title mdl-card--expand"></div>
           <div class="mdl-card__actions">
-            <span class="demo-card-image__filename">Bienvenido/a al HomeBanking</span>
+            <span class="demo-card-image__filename">Ver online en Polymer Serve</span>
           </div>
         </div>
     </div>
