--- a/Proyectos Acamica/02. HomeBanking/template login normal-home-banking/Login_v1/index.html
+++ b/Proyectos Acamica/02. HomeBanking/template login normal-home-banking/Login_v1/index.html
@@ -51,8 +51,8 @@
 						</span>
 					</div>
 					
-					<div class="container-login100-form-btn">
-						<button class="login100-form-btn">
+					<div id="loginposta" class="container-login100-form-btn">
+						<button class="login100-form-btn" onclick="login()">
 							Iniciar Sesión
 						</button>
 					</div>
@@ -95,7 +95,8 @@
 		})
 	</script>
 <!--===============================================================================================-->
-	<script src="js/main.js"></script>
+	<script src="js/login.js"></script>
+	<script src="js/../../js/homebanking.js"></script>
 
 </body>
 </html>
