--- a/Proyectos Acamica/02. HomeBanking/template login normal-home-banking/index.html
+++ b/Proyectos Acamica/02. HomeBanking/template login normal-home-banking/index.html
@@ -16,7 +16,7 @@
     <div class="header">
       <img class="logo" src="img/logo.png"/>
       <div class="align-left">
-        <button id="login" style="display: block" onclick="login()" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">Iniciar Sesión</button>
+<!--         <button id="login" style="display: block" onclick="login()" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">Iniciar Sesión</button> -->
         <span id="nombre" style="display: none">Bienvenido/a</span>
         <img id="icono" class="avatar" style="display: none" src="img/avatar.svg"/>
       </div>
@@ -80,6 +80,8 @@
     </div>
     
   </body>
-  <script src="js/homebanking.js"></script>
+  <!-- Comportamiento -->
+  <script src="js/../js/homebanking.js"></script>
+  <script src="js/login.js"></script>
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </html>
