--- a/Proyectos Acamica/01. CV/CVOnline/index.html
+++ b/Proyectos Acamica/01. CV/CVOnline/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>CV Online</title>
-	 	<link rel="stylesheet" type="text/css" href="main.css">
+	 	<link rel="stylesheet" type="text/css" href="estilos.css">
 	</head>
 	<body class="limite">
 
@@ -25,8 +25,20 @@
 
 <!-- Contenido Principal -->	
 		<div id="contenidoprincipal" class="limite">
-			<img src="../Imagenes/JR_2.png" alt="Foto de perfil" class="resize">
-			<h1>JORGE ROLDÁN</h1>
+
+			<div id="perfil">
+				<img src="../Imagenes/JR_2.png" alt="Foto de perfil" class="resize">
+				<h1>JORGE ROLDÁN</h1>
+				<div id="menuperfil">
+					<ol>
+						<li><a href="#quiensoy">Quién soy</a></li>
+						<li><a href="#formacion">Formación</a></li>
+						<li><a href="#experiencia">Experiencia</a></li>
+						<li><a href="#portfolio">Portfolio</a></li>
+					</ol>
+				</div>
+			</div>
+			
 		</div>
 
 <!-- Contenido Secundario -->
@@ -46,22 +58,22 @@
 	<!-- Formación -->
 			<div id="formacion">	
 				<h2 class="titulo">Formación</h2>
-				<h3><strong>Ing. Industrial, Tecnológico de Monterrey</strong></h3>
+				<h3><strong id="formacion1">Ing. Industrial, Tecnológico de Monterrey</strong></h3>
 				<p>2004-2009</p>
-				<h3><strong>Profesorado nivel medio y superior,  Universidad Austral</strong></h3>
+				<h3><strong id="formacion2">Profesorado nivel medio y superior,  Universidad Austral</strong></h3>
 				<p>2014-2016</p>						
 			</div>
 	
 	<!-- Experiencia -->
 			<div id="experiencia">
 				<h2 class="titulo">Experiencia</h2>
-				<h3><strong>Ministerio de Educación de la Provincia de Buenos Aires</strong></h3>
+				<h3><strong id="experiencia1">Ministerio de Educación de la Provincia de Buenos Aires</strong></h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere maxime distinctio cum dolores autem magni culpa doloribus in similique laudantium. Quod quaerat facilis suscipit laborum fugiat! Adipisci ipsa vitae nisi.</p>
-				<h3><strong>Comunidad Developers for Good</strong></h3>
+				<h3><strong id="experiencia2">Comunidad Developers for Good</strong></h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere maxime distinctio cum dolores autem magni culpa doloribus in similique laudantium. Quod quaerat facilis suscipit laborum fugiat! Adipisci ipsa vitae nisi.</p>
-				<h3><strong>Fundación Enseñá por Argentina</strong></h3>
+				<h3><strong id="experiencia3">Fundación Enseñá por Argentina</strong></h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere maxime distinctio cum dolores autem magni culpa doloribus in similique laudantium. Quod quaerat facilis suscipit laborum fugiat! Adipisci ipsa vitae nisi.</p>
-				<h3><strong>Faurecia</strong></h3>
+				<h3><strong id="experiencia4">Faurecia</strong></h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere maxime distinctio cum dolores autem magni culpa doloribus in similique laudantium. Quod quaerat facilis suscipit laborum fugiat! Adipisci ipsa vitae nisi.</p>
 			</div>
 	
