CV y Homebanking casi OK

--- a/Proyectos Acamica/01. CV/CVOnline/index.html
+++ b/Proyectos Acamica/01. CV/CVOnline/index.html
@@ -45,6 +45,7 @@
 		<div id="contenidosecundario" class="limite">
 		
 	<!-- Quién Soy -->
+		<div id="menu-quiensoy">
 			<div id="quiensoy">
 			<h2 class="titulo">Quién Soy</h2>	
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit assumenda voluptate consequuntur quidem, odio, esse nisi architecto, aliquid nostrum totam vel velit dicta soluta iure adipisci. Consequatur, quia corporis reiciendis.</p>
@@ -54,7 +55,7 @@
 					<li><strong>Correo:</strong>roldan21@gmail.com</li>
 				</ul>			
 			</div>
-	
+		</div>
 	<!-- Formación -->
 			<div id="formacion">	
 				<h2 class="titulo">Formación</h2>
