--- a/Proyectos Acamica/01. CV/CVOnline/index.html
+++ b/Proyectos Acamica/01. CV/CVOnline/index.html
@@ -12,10 +12,10 @@
 		  <a href="#"><svg viewBox="0 0 24 24">
 		    <path fill="#ffffff" d="M9,19V13H11L13,13H15V19H18V10.91L12,4.91L6,10.91V19H9M12,2.09L21.91,12H20V21H13V15H11V21H4V12H2.09L12,2.09Z" />
 		    </svg></a>		  
-		  <a href="#quiensoy">Quién soy</a>
-		  <a href="#formacion">Formación</a>
-		  <a href="#experiencia">Experiencia</a>
-		  <a href="#portfolio">Portfolio</a>
+		  <a href="#fakequiensoy">Quién soy</a>
+		  <a href="#fakeformacion">Formación</a>
+		  <a href="#fakeexperiencia">Experiencia</a>
+		  <a href="#fakeportfolio">Portfolio</a>
 		  <a href="#" target="_blank" class="hover-black hold-right">JORGE ROLDÁN</a>
 		</div>
 
@@ -31,10 +31,10 @@
 				<h1>JORGE ROLDÁN</h1>
 				<div id="menuperfil">
 					<ol>
-						<li><a href="#quiensoy">Quién soy</a></li>
-						<li><a href="#formacion">Formación</a></li>
-						<li><a href="#experiencia">Experiencia</a></li>
-						<li><a href="#portfolio">Portfolio</a></li>
+						<li><a href="#fakequiensoy">Quién soy</a></li>
+						<li><a href="#fakeformacion">Formación</a></li>
+						<li><a href="#fakeexperiencia">Experiencia</a></li>
+						<li><a href="#fakeportfolio">Portfolio</a></li>
 					</ol>
 				</div>
 			</div>
@@ -45,6 +45,7 @@
 		<div id="contenidosecundario" class="limite">
 		
 	<!-- Quién Soy -->
+		<div id="fakequiensoy"></div>
 		<div id="menu-quiensoy">
 			<div id="quiensoy">
 			<h2 class="titulo">Quién Soy</h2>	
@@ -57,6 +58,7 @@
 			</div>
 		</div>
 	<!-- Formación -->
+			<div id="fakeformacion"></div>
 			<div id="formacion">	
 				<h2 class="titulo">Formación</h2>
 				<h3><strong id="formacion1">Ing. Industrial, Tecnológico de Monterrey</strong></h3>
@@ -66,7 +68,9 @@
 			</div>
 	
 	<!-- Experiencia -->
+			<div id="fakeexperiencia"></div>
 			<div id="experiencia">
+				<div class="fakespace"></div>
 				<h2 class="titulo">Experiencia</h2>
 				<h3><strong id="experiencia1">Ministerio de Educación de la Provincia de Buenos Aires</strong></h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere maxime distinctio cum dolores autem magni culpa doloribus in similique laudantium. Quod quaerat facilis suscipit laborum fugiat! Adipisci ipsa vitae nisi.</p>
@@ -79,7 +83,9 @@
 			</div>
 	
 	<!-- Portfolio -->
+			<div id="fakeportfolio"></div>
 			<div id="portfolio">
+				<div class="fakespace"></div>
 				<h2 class="titulo">Portfolio</h2>
 
 				<div class="col columna-1"><a href="../../07. Encuestados/index.html"><img src="../Imagenes/encuestados-icon.png" alt="proyecto encuestados"></a>
