--- a/Proyectos Acamica/02. HomeBanking/firebase-home-banking/login-app/index.html
+++ b/Proyectos Acamica/02. HomeBanking/firebase-home-banking/login-app/index.html
@@ -110,6 +110,20 @@
       };
       firebase.initializeApp(config);
     </script>
+  <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-messaging.js"></script>
 
+  <!-- Leave out Storage -->
+  <!-- <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-storage.js"></script> -->
+
+  <script>
+    var config = {
+      // ...
+    };
+    firebase.initializeApp(config);
+  </script>
 
 </html>
