--- a/Proyectos Acamica/02. HomeBanking/template login normal-home-banking/index.html
+++ b/Proyectos Acamica/02. HomeBanking/template login normal-home-banking/index.html
@@ -84,4 +84,21 @@
   <script src="js/../js/homebanking.js"></script>
   <script src="js/login.js"></script>
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-messaging.js"></script>
+
+  <!-- Leave out Storage -->
+  <!-- <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase-storage.js"></script> -->
+
+  <script>
+    var config = {
+      // ...
+    };
+    firebase.initializeApp(config);
+</script>
+
+  
 </html>
