Rompecabezas casi ok

--- a/Ejercicios Prácticos/Bucles/index.html
+++ b/Ejercicios Prácticos/Bucles/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Bucles</title>
+
+	<script src="bucle.js">
+		
+	</script>
 </head>
 <body>
-	
+
+
 </body>
 </html>
