--- a/Proyectos Acamica/02. HomeBanking/normal-home-banking/index.html
+++ b/Proyectos Acamica/02. HomeBanking/normal-home-banking/index.html
@@ -64,7 +64,7 @@
         <button class="links" onclick="extraerDinero()">Extraer dinero</button>
         <button class="links" onclick="depositarDinero()">Depositar dinero</button>
         <button class="links" onclick="pagarServicio()">Pagar servicios</button>
-        <button class="links" onclick="agregarCuentaFrecuente()">Agregar cuenta frecuente</button>
+        <button class="links" onclick="agregarCuentaFrecuente()">Agregar cuenta frecuente <span style="color: red">¡Nuevo!</span></button>
         <button class="links" onclick="transferirDinero()">Transferir dinero</button>
         <button class="links" onclick="cambiarLimiteDeExtraccion()">Cambiar límite de extracción</button>
       </div>
