--- a/Proyectos Acamica/03. Rompecabezas/juego.html
+++ b/Proyectos Acamica/03. Rompecabezas/juego.html
@@ -66,7 +66,7 @@
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLongTitle"><span style="color: blue">Rompecabezas</span> | Acamica</h5>
+            <h5 class="modal-title" id="exampleModalLongTitle">Rompecabezas | <span style="color: blue">Acamica</span> </h5>
             
           </div>
           <div class="modal-body">
@@ -76,7 +76,7 @@
 
           </div>
           <div class="modal-footer">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">Cerrar</span>
             </button>
             <button type="button" class="btn btn-primary" onclick="iniciar()">Jugar de Nuevo</button>
