--- a/Proyectos Acamica/03. Rompecabezas/juego.html
+++ b/Proyectos Acamica/03. Rompecabezas/juego.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
     <!-- Estilos para Modal Popup-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
   </head>
   <body>
     <div id="displayprincipal" style="display: block" >
@@ -58,7 +58,7 @@
 
     <!-- Button trigger modal -->
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
-      Launch demo modal
+      Cartel Ganador demo modal
     </button>
 
     <!-- Modal -->
@@ -72,14 +72,15 @@
           <div class="modal-body">
             <h1>Vamooos Carajo, muy bien!!!</h1>
             <img src="assets/images/win2.gif" alt="">
-            <h5>No esperaba menos de un estudiante de <span style="color: blue">Acamica</span> =)</h5>
+            <h5>No esperaba menos de un estudiante de <span style="color: blue">Acamica</span></h5>
+            <h5 style="text-align: center">=D</h5>
 
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">Cerrar</span>
             </button>
-            <button type="button" class="btn btn-primary" onclick="iniciar()">Jugar de Nuevo</button>
+            <button type="button" class="btn btn-primary" onclick="iniciar()" >Jugar de Nuevo</button>
           </div>
         </div>
       </div>
