Pixel Art paleta y grilla-pixel

--- a/Repaso/Contador Clicks/index.html
+++ b/Repaso/Contador Clicks/index.html
@@ -7,9 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-   <div>
+    <div>
         <button id="boton">Click Acá</button>
    </div>
+   <div id="resultado"></div>
 
 </body>
 <script src="clicks.js"></script>
